--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
 		"@types/react-helmet": "^6.1.6",
+		"history": "^5.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
+		"react-redux": "^8.1.1",
 		"react-router-dom": "^6.13.0",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.1",
+		"redux-devtools-extension": "^2.13.9",
+		"redux-thunk": "^2.4.2",
 		"styled-components": "^6.0.0-rc.3"
 	},
 	"scripts": {
@@ -37,5 +43,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11"
 	}
 }
